# takt

./: .gitattributes  .gitignore  .orchestrator  AGENTS.md  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  pyproject.toml
.claude/agents/: spec-reviewer.md
.codex/agents/: spec-reviewer.toml
.github/workflows/: ci.yml
.orchestrator/: config.yaml
.orchestrator/beads/: B-02be9122.json  B-031382d2.json  B-0426c52e.json  B-0b4006c7.json  B-0c1ea0ea-docs.json  B-0c1ea0ea-review.json  B-0c1ea0ea-test.json  B-0c1ea0ea.json  B-0d63792a.json  B-0e9ad452.json  B-0f499d78-docs.json  B-0f499d78-review.json  B-0f499d78-test.json  B-0f499d78.json  B-13ba320d-docs.json  B-13ba320d-review.json  B-13ba320d-test.json  B-1ae8b645-review.json  B-1ae8b645-test-corrective.json  B-1ae8b645-test.json  B-2460404c-docs.json  B-2460404c-review.json  B-2460404c-test.json  B-27469f53.json  B-2e04745d.json  B-2ef850ed.json  B-2f2a0665-review.json  B-2f2a0665-test.json  B-31ec6675.json  B-32812ba6-docs.json  B-32812ba6-review.json  B-32812ba6-test.json  B-3355be1f.json  B-394ffa2d.json  B-3f6ffee3.json  B-4ad21cc2-review.json  B-4ad21cc2-test-corrective.json  B-4ad21cc2-test.json  B-4bcc35b0.json  B-4c08f3f1.json  (+78 more)
.takt/: config.yaml
.takt/beads/: B-009953f4-docs.json  B-009953f4-review.json  B-009953f4-test.json  (+1315 more)
docs/: development.md  fleet.md  multi-backend-agents.md  onboarding.md  scheduler-telemetry.md  tui.md
specs/: HOWTO.md  bead-telemetry-and-prompt-logging.md  codebase-refactoring.md  institutional-memory-skill.md  plan-review-gate-v1.md  planner-bead-sizing-and-coalesced-followups.md  structured-review-verdict-v1.md  token-efficiency-guardrails-v1.md  tui-layout-restructure-and-maximize.md  tui-operator-actions-v1.md  tui-operator-console-v1.md  tui-panel-focus-scroll-and-mouse-v1.md  tui-shortcuts-help-overlay-v1.md  uuid-bead-ids.md
tests/: helpers.py  test_assets.py  test_bead_telemetry.py  test_cli_bead.py  test_cli_init.py  test_cli_memory.py  test_cli_merge.py  test_cli_plan.py  test_cli_run.py  test_cli_summary.py  test_cli_telemetry.py  test_cli_tui.py  test_cli_upgrade.py  test_cli_version.py  test_config.py  test_config_wiring.py  test_config_wiring_phase3.py  test_console.py  test_gitutils_worktree_exclude.py  test_graph.py  test_labels.py  test_memory_backend.py  test_memory_templates.py  test_merge_safety.py  test_model_override.py  test_model_selection.py  test_onboarding.py  test_onboarding_assets.py  test_onboarding_config.py  test_onboarding_prompts.py  test_onboarding_scaffold.py  test_onboarding_upgrade.py  test_orchestrator.py  test_planner.py  test_prompts.py  test_recovery_flow.py  test_recovery_for.py  test_runner_memory_env.py  test_runner_timeout.py  test_scheduler_beads.py  (+13 more)
(+228 files in other folders)
