[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-orchestration"
version = "0.1.0"
description = "Codex-based multi-agent orchestration MVP"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6,<7",
    "textual>=0.85,<1",
]

[project.scripts]
orchestrator = "codex_orchestrator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_orchestrator = [
    "_data/templates/agents/*.md",
    "_data/docs/memory/*.md",
    "_data/default_config.yaml",
    "_data/agents_skills/**/*",
    "_data/claude_skills/**/*",
]

[tool.uv]
package = true
default-groups = ["dev"]
