[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-takt"
version = "0.1.12"
description = "Multi-agent orchestration for AI-assisted software development"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6,<7",
    "textual>=0.85,<1",
]

[project.scripts]
takt = "agent_takt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_takt = [
    "_data/templates/agents/*.md",
    "_data/docs/memory/*.md",
    "_data/default_config.yaml",
    "_data/agents_skills/**/*",
    "_data/claude_skills/**/*",
]

[tool.uv]
package = true
default-groups = ["dev"]
